--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "models"]
-	path = models
+[submodule "tensorflow_models"]
+	path = tensorflow_models
 	url = git@github.com:tensorflow/models.git
