--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,20 @@
 [bumpversion]
-current_version = 1.0.0-rc0
+current_version = 0.1.0
 commit = True
 tag = True
-
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
+    (?:
+        (?P<prerel>[abc]|rc|dev)     # 'a' = alpha, 'b' = beta
+                                        # 'c' or 'rc' = release candidate
+        (?:
+            (?P<prerelversion>\d+(?:\.\d+)*)
+        )?
+    )?
+serialize =
+    {major}.{minor}.{patch}{prerel}{prerelversion}
+    {major}.{minor}.{patch}{prerel}
+    {major}.{minor}.{patch}
+    
 [bumpversion:file:setup.py]
 search = version='{current_version}'
 replace = version='{new_version}'
