--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,19 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 1.0.0rc0
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
-    (?:
-        (?P<prerel>[abc]|rc|dev)     # 'a' = alpha, 'b' = beta
-                                        # 'c' or 'rc' = release candidate
-        (?:
-            (?P<prerelversion>\d+(?:\.\d+)*)
-        )?
-    )?
-serialize =
-    {major}.{minor}.{patch}{prerel}{prerelversion}
-    {major}.{minor}.{patch}{prerel}
-    {major}.{minor}.{patch}
-    
+	(?:
+	(?P<prerel>[abc]|rc|dev)     # 'a' = alpha, 'b' = beta
+	(?:
+	(?P<prerelversion>\d+(?:\.\d+)*)
+	)?
+	)?
+serialize = 
+	{major}.{minor}.{patch}{prerel}{prerelversion}
+	{major}.{minor}.{patch}{prerel}
+	{major}.{minor}.{patch}
+
 [bumpversion:file:setup.py]
 search = version='{current_version}'
 replace = version='{new_version}'
