--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,18 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 1.0.0rc1
 commit = True
 tag = True
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
+	(?:
+	(?P<prerel>[abc]|rc|dev)     # 'a' = alpha, 'b' = beta
+	(?:
+	(?P<prerelversion>\d+(?:\.\d+)*)
+	)?
+	)?
+serialize = 
+	{major}.{minor}.{patch}{prerel}{prerelversion}
+	{major}.{minor}.{patch}{prerel}
+	{major}.{minor}.{patch}
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
@@ -18,7 +29,6 @@ universal = 1
 exclude = docs
 
 [aliases]
-# Define setup.py command aliases here
 test = pytest
 
 [tool:pytest]
