--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,8 +4,9 @@ include HISTORY.md
 include LICENSE
 include README.md
 
-recursive-include tests *
+include rpi_deep_pantilt/data/mscoco_label_map.pbtxt
+
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
-recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
+recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif 
