--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 models/*
 #!*.tar.gz
 
+tensorflow-2.2.0-cp37-cp37m-linux_armv7l.whl
+
 .DS_Store
 # Byte-compiled / optimized / DLL files
 __pycache__/
